# elec

./: .gitignore  README.md  calc_adv.c  calc_charge.c  calc_gauss.c  flash.c  lookup.c  main.py  make.sh  makefile  pyproject.toml
description/: charge.py  csr_charge.py  csr_fc.py  csr_qc.py  fod.py
elec_rust/: Cargo.toml  build.rs  op.sh
elec_rust/src/: main.rs
